--- a/styles.css
+++ b/styles.css
@@ -162,13 +162,13 @@ body {
     text-align: justify;
 }
 
-.skills__header {
+.skills__header, .hobby__header {
     color: var(--secondary-text-color);
     text-align: center;
     margin-bottom: 15px;
 }
 
-.skills__text {
+.skills__text, .hobby__text {
     color: var(--secondary-text-color);
     text-align: justify;
 }
